feat(vmmac,vmmaclease): add new controllers
